--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
+    "react-materialize": "^3.0.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8"
   },
