remove signup with FB button from signup form trying to create profile page

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^16.8.5",
     "react-materialize": "^3.0.2",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "prop-types": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,5 +30,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@material-ui/core": "^3.9.2"
+  }
 }
